# xrnet

./: .gitignore  .gitmodules  API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOY.md  DEPLOYMENT_PACKAGE_MANIFEST.md  HANDOFF.md  IDEAS.md  MAINTENANCE.md  MEMORY.md  PERFORMANCE.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SUPERVISOR_DIRECTIVE.md  TODO.md  USAGE.md  VISION.md  autonomous_workflow.sh  build.sh  main.py  mesh_history.json  package.sh  pipeline.sh  scalability_report.json  start.sh  xrnet.service
backend/: Cargo.toml  test_smoke.py
backend/src/: discovery.rs  escrow.rs  governance.rs  main.rs  mesh.rs  routing.rs  social.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  MonitoringDashboard.tsx  SpatialViewer.tsx
frontend/src/components/: JobTaskBoard.tsx  LearningHub.tsx  MonitoringDashboard.tsx  SpatialViewer.tsx
scripts/: autonomous_protocol.py  benchmark_hardware_performance.py  benchmark_mesh.py  debug_telemetry.py  deploy_prod.sh  generate_systemd_service.py  mesh_dashboard.html  mock_peer.py  monitor_performance.py  setup_production.sh  simulate_mesh.py  start_mesh_monitor.py  start_staging_mesh.sh  sync_repo.sh  validate_hardware_compatibility.py  validate_integrity.py
spatial/: config.toml
tests/: e2e_integration.py  external_device_sync.py  monitoring_integration.py  routing_integration.py  test_telemetry.py
