[package]
name = "xrnet-backend"
version = "0.1.1"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "dns", "websocket", "noise", "yamux", "kad", "gossipsub", "identify", "ping", "macros", "tokio", "mdns"] }
tokio = { version = "1.37", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4", "serde"] }
